# suitesparse

./: .gitignore  .project  CMakeLists.txt  SuiteSparseConfig.cmake  testhelper.cmake  testhelper2.cmake
AMD/: CMakeLists.txt
AMD/Demo/: CMakeLists.txt  testhelper.cmake
BTF/: CMakeLists.txt
CAMD/: CMakeLists.txt
CAMD/Demo/: CMakeLists.txt
CCOLAMD/: CMakeLists.txt
CCOLAMD/Demo/: CMakeLists.txt  ccolamd_l_example.out~
CHOLMOD/: CMakeLists.txt
CHOLMOD/Demo/: CMakeLists.txt  testhelper.cmake
CHOLMOD/Include/: cholmod_blas.h
COLAMD/: CMakeLists.txt
COLAMD/Demo/: CMakeLists.txt
KLU/: CMakeLists.txt
KLU/Demo/: CMakeLists.txt
SuiteSparse_config/: CMakeLists.txt  SuiteSparse_config.h
UMFPACK/: CMakeLists.txt
UMFPACK/Demo/: CMakeLists.txt
UMFPACK/Source/: cholmod_blas.h
metis-4.0.3/: CMakeLists.txt
