file(GLOB src Source/*.c)
ADD_LIBRARY(ccolamdi STATIC ${src})
target_compile_definitions(ccolamdi PRIVATE DINT)
TARGET_INCLUDE_DIRECTORIES(ccolamdi PRIVATE Include ../SuiteSparse_config)
ADD_LIBRARY(ccolamdl STATIC ${src})
target_compile_definitions(ccolamdl PRIVATE DLONG)
TARGET_INCLUDE_DIRECTORIES(ccolamdl PRIVATE Include ../SuiteSparse_config)

if (BUILD_TESTING)
    add_subdirectory(Demo)
endif()