file(GLOB src Source/*.c)
ADD_LIBRARY(colamdi STATIC ${src})
target_compile_definitions(colamdi PRIVATE DINT)
TARGET_INCLUDE_DIRECTORIES(colamdi PRIVATE Include ../SuiteSparse_config)
ADD_LIBRARY(colamdl STATIC ${src})
target_compile_definitions(colamdl PRIVATE DLONG)
TARGET_INCLUDE_DIRECTORIES(colamdl PRIVATE Include ../SuiteSparse_config)

if (BUILD_TESTING)
    add_subdirectory(Demo)
endif()